expose delivery assignment to gateway, adjust layout, note logic